Replace deprecated Double value casting